[package]
name = "dns-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bytes = "1.1.0"
dns-message-parser = "0.6.0"
env_logger = "0.9.0"
log = "0.4.14"
tokio = { version = "1", features = [ "full" ] }

macos-routing-table = { path = "../macos-routing-table" }
futures = "0.3.17"
futures-util = "0.3.17"
lru = "0.7.0"
structopt = "0.3.23"
toml = "0.5.8"
serde = { version = "1", features = ["derive"] }
