[package]
edition = "2018"
name = "dns-proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.44"
async-trait = "0.1.51"
bytes = "1.1.0"
cidr = "0.2.1"
deadpool = "0.9.1"
dns-message-parser = "0.6.0"
env_logger = "0.9.0"
futures = "0.3.17"
futures-util = "0.3.17"
log = "0.4.14"
lru = "0.7.0"
macos-routing-table = {path = "../macos-routing-table"}
nix = "0.23.0"
serde = {version = "1", features = ["derive", "rc"]}
structopt = "0.3.23"
tempfile = "3.2.0"
tokio = {version = "1", features = ["full"]}
toml = "0.5.8"
